<resources>
    <string name="site_address_hint">Адрес</string>
    <string name="site_country_hint">Страна</string>
    <string name="site_region_hint">Регион</string>
    <string name="site_sub_region_hint">Район</string>
    <string name="site_city_hint">Город</string>
    <string name="site_street_hint">Улица</string>
    <string name="site_building_hint">Строение</string>
    <string name="site_postal_hint">Индекс</string>
    <string name="site_region_code_hint">Код</string>

    <string name="site_common_data">Общие данные</string>
    <string name="site_name_hint">Наименование / Код сайта</string>
    <string name="site_description_hint">Описание сайта</string>
    <string name="site_type_hint">Тип</string>
    <string name="site_type_description_hint">Описание типа сайта</string>
    <string name="site_tenant_name_hint">Собственник</string>

    <string name="site_geo_hint">Гео</string>
    <string name="site_altitude_hint">Широта(дес)</string>
    <string name="site_longitude_hint">Долгота(дес)</string>


    <string name="btn_add_construction">Добавить конструкцию</string>
    <string name="btn_finish">Завершить</string>

    <!-- Construction -->
    <string name="construction_description_hint">Описание конструкции</string>
    <string name="construction_date_hint">Дата</string>
    <string name="construction_type_hint">Тип конструкции</string>
    <string name="construction_height_hint">Высота(мм)</string>
    <string name="construction_config_hint">Конфигурация</string>
    <string name="construction_quantity_sections_hint">Кол-во секций</string>

    <!--Sections-->
    <string name="construction_sections_data">Секции</string>

    <string name="section_height_hint">Высота(мм)</string>
    <string name="section_bottom_hint">Низ(мм)</string>
    <string name="section_top_hint">Верх(мм)</string>

    <!-- Construction types array for drop down-->
    <string-array name="construction_types">
        <item>Мачта</item>
        <item>Башня</item>
        <item>Столб</item>
    </string-array>

    <!-- Construction config array for drop down-->
    <string-array name="construction_configs">
        <item>Четырехгранная</item>
        <item>Трехгранная</item>
        <item>Круг</item>
    </string-array>


    <!-- Fill sections dynamically -->
    <string name="section_number">%1$d</string>

    <!-- Creation fields errors -->
    <string name="date_field_error">дд.мм.гггг</string>
    <string name="height_field_error">10,000..120,000</string>
    <string name="q_sections_field_error">1..30</string>
    <string name="section_height_field_error">1000..30000</string>
    <string name="section_width_top_error">100..20000</string>

    <!--Messages-->
    <string name="wrong_site_data">Сайт содержит некорректные данные для сохранения</string>
    <string name="construction_fault">Конструкция не прошла проверку</string>
    <string name="construction_success">Конструкция успешно прошла проверку</string>
    <string name="site_success">Проверка данных сайта проведена</string>
    <string name="too_little_sections_to_duplicate">Недостаточно секций для дублирования</string>


    <string name="must_be_filled">Обязательно к заполнению</string>
    <string name="must_be_filled_short">Обяз..</string>
    <string name="geo_format_lat">xx.xxxx</string>
    <string name="geo_format_lon">xx(xxx).xxxx</string>
    <string name="geo_wrong_value_latitude">0..90</string>
    <string name="geo_wrong_value_longitude">0..180</string>



    <!-- Comment for toasts -->

</resources>