<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:orientation="horizontal"
    android:background="@drawable/sec_item_bgd_neutral"
    >
    <TextView
        android:id="@+id/tv_number_section_creation"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/circular_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="12"
        />
    <EditText
        android:id="@+id/et_section_height_creation"
        style="@style/SectionEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/section_height_hint"
        />
    <EditText
        android:id="@+id/et_section_bottom_creation"
        style="@style/SectionEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/section_bottom_hint"
        />
    <EditText
        android:id="@+id/et_section_top_creation"
        style="@style/SectionEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/section_top_hint"
        />
</LinearLayout>
